[gd_scene load_steps=4 format=3 uid="uid://duhyv6h2rigtx"]

[ext_resource type="PackedScene" uid="uid://c4g2iil4ce0uk" path="res://scenes/map/map.tscn" id="1_4wbri"]
[ext_resource type="Script" path="res://scenes/run/run.gd" id="1_i0237"]
[ext_resource type="Resource" uid="uid://df0751sjd58ia" path="res://scenes/run/run_startup.tres" id="2_reh8r"]

[node name="Run" type="Node"]
script = ExtResource("1_i0237")
run_startup = ExtResource("2_reh8r")

[node name="Map" parent="." instance=ExtResource("1_4wbri")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="DebugButtons"]
layout_mode = 2

[node name="MapButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Map"

[node name="BattleButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Shop"

[node name="RewardsButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Rewards"

[node name="CampfireButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Campfire"

[node name="TreasureRoomButton" type="Button" parent="DebugButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Treasure Room"
